[package]
name = "prust_core"
version = "0.1.1"
authors = ["syelman <selman.ozleyen2017@gtu.edu.tr>", "visionspace <info@visionspace.com>"]
description = "A crate for encoding/decoding PUS-C packet data structures with ease."
edition = "2018"
repository = "https://github.com/visionspacetec/Prust-Core"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/visionspacetec/Prust#readme"

[dependencies]
byteorder = {version = "1.3.4", default-features = false }
libc = "0.2.0"
hashbrown = "0.8.2"
arrayvec = {version ="0.5.1", default-features = false}
arrayref = "0.3.6"
